# Plinko-Dynamics

./: .gitignore  .pre-commit-config.yaml  2pager.md  CHANGELOG.md  IMPROVEMENTS_SUMMARY.md  README.md  README_old.md  ai_dataloader.py  ai_demo.py  ai_integration_notebook.ipynb  demo_enhanced.py  demo_notebook.ipynb  demo_quantum_galton_ai_dec.pt  demo_quantum_galton_ai_epsilon.pt  demo_quantum_galton_ai_func.pt  demo_quantum_galton_ai_rec.pt  latent_ode.py  project_summary.md  pyproject.toml  quantum_galton_board.py  requirements.txt  setup.py  test_v2.py
.github/workflows/: ci.yml
plinko_dynamics/: __init__.py  _version.py
plinko_dynamics/ai/: __init__.py  models.py
plinko_dynamics/core/: __init__.py  classical_simulator.py  quantum_galton.py
plinko_dynamics/utils/: __init__.py  benchmarks.py  data_generation.py  metrics.py
plinko_dynamics/visualization/: __init__.py  plotter.py  themes.py
tests/: __init__.py  test_benchmarks.py  test_quantum_galton.py
